[package]
name = "aes-gcm-siv-wasm"
version = "0.1.2"
authors=[ "Ben Aubin <ben@benaubin.com>", "Arpan Dhatt <dhatt@utexas.edu>", "Nicholas Orlowsky <nickorlow@nickorlow.com>" ]
description = "A WASM library to encrypt/decrypt text using AES-GCM-SIV"
edition="2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm-siv = { git = "https://github.com/Verified-Bot/AEADs" }
base64 = "0.20.0"